; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-job.c_lwan_job_thread_init.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-job.c_lwan_job_thread_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@running = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"Initializing low priority job thread\00", align 1
@jobs = common dso_local global i32 0, align 4
@self = common dso_local global i32 0, align 4
@job_thread = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [15 x i8] c"pthread_create\00", align 1
@SCHED_IDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lwan_job_thread_init() #0 {
  %1 = load i32, i32* @running, align 4
  %2 = icmp ne i32 %1, 0
  %3 = xor i1 %2, true
  %4 = zext i1 %3 to i32
  %5 = call i32 @assert(i32 %4)
  %6 = call i32 @lwan_status_debug(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 @list_head_init(i32* @jobs)
  store i32 1, i32* @running, align 4
  %8 = load i32, i32* @job_thread, align 4
  %9 = call i64 @pthread_create(i32* @self, i32* null, i32 %8, i32* null)
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %0
  %12 = call i32 @lwan_status_critical_perror(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  br label %13

13:                                               ; preds = %11, %0
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @lwan_status_debug(i8*) #1

declare dso_local i32 @list_head_init(i32*) #1

declare !callback !2 dso_local i64 @pthread_create(i32*, i32*, i32, i32*) #1

declare dso_local i32 @lwan_status_critical_perror(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
